# ALPHA

aftn/aftnclientgui/: CMakeLists.txt  Readme
aftn/aftnclientgui/etc/: config.xml
aftn/aftnmanager/: CMakeLists.txt  aftnmanager.rc.in
aftn/aftnmanager/cpack/: readme.txt  welcome.txt
aftn/aftnmanager/src/: main.cpp  main.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
aftn/aftnserver/: CMakeLists.txt  Readme  config.xml
aftn/aftnservice/: CMakeLists.txt
aftn/aftnservice/cpack/: copyright.txt
aftn/aftnws/: CMakeLists.txt  aftnws.rc.in  aftnws_fpl.cmake  aftnws_fpl.pri  aftnws_login.cmake  aftnws_login.pri  readme.txt
aftn/aftnws/cpack/: copyright.txt
aftn/aftnws/etc/: config.qrc  default-config.xml
aftn/aftnws/share/: logo.rc
arincmerge/: CMakeLists.txt  Doxyfile.in  Makefile  environmenteditor-release.bat  environmenteditor.pro  environmenteditor.rc.in  moc_ArincDatabaseImporter.cpp  moc_ArincDatabaseImporterDialog.cpp  moc_ArincFilePosIterator.cpp  moc_ArincParserDialog.cpp  moc_ArincParserThread.cpp  moc_ArincStatusStorage.cpp  moc_SimpleComboboxDelegate.cpp  moc_acdialog.cpp  moc_airporteditor.cpp  moc_arincmergemainwindow.cpp  moc_baseeditor.cpp  moc_coorddelegate.cpp  moc_coordedit.cpp  moc_fireditor.cpp  moc_holdingeditor.cpp  moc_importarincdialog.cpp  moc_pointeditor.cpp  moc_predefs.h  moc_qtcheckboxdelegate.cpp  moc_qtlanguagemenu.cpp  moc_qttranslator.cpp  moc_qtxmlsettings.cpp  moc_restricteditor.cpp  moc_restrictusereditor.cpp  moc_routeeditor.cpp  moc_sectoreditor.cpp  moc_selectfirdialog.cpp  moc_ssaeditor.cpp  moc_ssamodel.cpp  moc_synchronizationdialog.cpp  moc_synchronizer.cpp  moc_viewdelegate.cpp  ui_ArincDatabaseImporterDialog.h  ui_ArincParserDialog.h  (+14 more)
arincmerge/doc/: readme.docx
arincmerge/etc/: default-config.xml  environmenteditor.xml  ssa_point_pseudo_fk_fct_point_trg.html
arincmerge/share/translations/: environmenteditor_ru.qm  environmenteditor_ru.ts  lupdate_script.bat
arincmerge/sqlschema/: arinc.erwin  arinc.sql
arincmerge/src/: arincmergemainwindow.cpp  arincmergemainwindow.h  arincmergemainwindow.ui  main.cpp  main.h
arincmerge/src/common/: DeferredCallThread.cpp  DeferredCallThread.h  DeferredProcedure.h  misc.cpp  misc.h  widgetsaver.cpp  widgetsaver.h
arincmerge/src/database/: ArincDatabaseImporter.cpp  ArincDatabaseImporterDialog.cpp  ArincDatabaseImporterDialog.h  ArincDatabaseImporterDialog.ui  FirBoundaryReplacer.cpp  FirBoundaryReplacer.h  synchronizer.cpp  synchronizer.h
arincmerge/src/dialogs/: acdialog.cpp  acdialog.h  acdialog.ui  selectfirdialog.ui  synchronizationdialog.cpp  synchronizationdialog.h  synchronizationdialog.ui
arincmerge/src/editors/: RefreshInterface.h  airporteditor.cpp  airporteditor.h  airporteditor.ui  baseeditor.cpp  baseeditor.h  dbscheme.cpp  dbscheme.h  editors.h  fireditor.cpp  fireditor.h  fireditor.ui  holdingeditor.cpp  holdingeditor.h  holdingeditor.ui  pointeditor.cpp  pointeditor.h  pointeditor.ui  restricteditor.cpp  restricteditor.h  (+17 more)
common/coordsys/: CMakeLists.txt  coordsys.pri  coordsys.pro  coordsysexport.pri
common/echelonswidget/: CMakeLists.txt  EchelonsWidget.cpp  EchelonsWidget.h  EchelonsWidget.ui  echelonswidget.pri
common/izmqt/: CMakeLists.txt  izmqt.pri  izmqt.pro
common/license/: Base32.cpp  Base32.h  CMakeLists.txt  HardwareId.cpp  HardwareId.h  HardwareProvider.cpp  HardwareProvider.h  License.cpp  License.h
common/qcyrilliccodecs/: CMakeLists.txt  allcodecs.h  plugin.cpp  qcyrilliccodecs.pri  qia5textcodec.cpp  qia5textcodec.h  qita2textcodec.cpp  qita2textcodec.h  qmtk2textcodec.cpp  qmtk2textcodec.h  qmtk5textcodec.cpp  qmtk5textcodec.h
common/qjson/: CMakeLists.txt  qjson-tests.pro  qjson.pri  qjson.pro
common/qtactiongroup/: CMakeLists.txt  QtActionGroup.cpp  QtActionGroup.h  qtactiongroup.cmake  qtactiongroup.pri
common/qtautotransaction/: CMakeLists.txt  qtautotransaction.cmake  qtautotransaction.cpp  qtautotransaction.h  qtautotransaction.pri
common/qtdelegates/: CMakeLists.txt  SimpleComboboxDelegate.cpp  SimpleComboboxDelegate.h  comboboxdelegate.cpp  comboboxdelegate.h  coorddelegate.cpp  coorddelegate.h  coordedit.cpp  coordedit.h  htmldelegate.h  plaintexteditdelegate.cpp  plaintexteditdelegate.h  qtcheckboxdelegate.cpp  qtcheckboxdelegate.h  qtcheckboxdelegate.pri  qtdelegates.cmake  qtdelegates.pri  tabledelegate.cpp  tabledelegate.h  texteditdelegate.cpp  texteditdelegate.h
common/qtlanguagemenu/: CMakeLists.txt  qtlanguagemenu.cmake  qtlanguagemenu.cpp  qtlanguagemenu.h  qtlanguagemenu.pri  qtlanguagemenu_ru.ts  qttranslator.cpp  qttranslator.h
common/qtmenuview/: CMakeLists.txt  qtmenuview.cpp  qtmenuview.h  qtmenuview.pri
common/qtservice/: CMakeLists.txt  qtservice.cpp  qtservice.pri  qtservice_win.cpp
common/qttoolbardialog/: CMakeLists.txt  qttoolbardialog.cpp  qttoolbardialog.h  qttoolbardialog.pri  qttoolbardialog.qrc
common/qtwindowmenu/: CMakeLists.txt  qtwindowmenu.cpp  qtwindowmenu.h  qtwindowmenu.pri
common/qtxmlsettings/: CMakeLists.txt  qtxmlsettings.cmake  qtxmlsettings.cpp  qtxmlsettings.h  qtxmlsettings.pri
common/settings/: CMakeLists.txt  memory_storage.cpp  memory_storage.h  registry_storage.cpp  registry_storage.h  settings.cpp  settings.h  settings_global.h  storage_interface.h  xml_storage.cpp  xml_storage.h
common/utilities/: CMakeLists.txt  file_save_guard.cpp  file_save_guard.h  multiparametric.h  performance_meter.cpp  performance_meter.h  singleton.h  translatable.cpp  translatable.h  translation.cpp  translation.h  utilities_global.h  utils.cpp  utils.h  xml_storage.cpp  xml_storage.h
cwp/: CMakeLists.txt  Doxyfile.in  master-release.bat  master.rc.in
cwp/docs/: Message STATUS Рё РґСЂСѓРіРёРµ.txt  OLDI РѕР±РјРµРЅ.txt  PEL RFL TFL.txt  readme.docx  release notes.txt  Алгоритм_лицензии.vsd  РђР±Р±СЂРµРІРёР°С‚СѓСЂС‹.txt  описание системы лицензирования.docx
cwp/etc/: 1cwp.xml  2cwp.xml  cwp-user.xml  cwp.xml  cwp2.xml  cwp_M2.xml  cwp_debug.xml  cwp_old.xml
cwp/share/: Resource.rc  SupervisorGui.rc.in  SupervisorServer.rc.in  resource.qrc
cwp/src/: main.cpp  main.h
(+2533 files in other folders)
